<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_task" />
        <item
            android:id="@+id/nav_date_reminder"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_birthday" />
        <item
            android:id="@+id/nav_daily_expense"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_daily" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_add_task" />
    </group>
</menu>