<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.project.whattodonow.ui.tasklist.TaskListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/nav_date_reminder"
        android:name="com.project.whattodonow.ui.gallery.DateReminderFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_date_reminder" />

    <fragment
        android:id="@+id/nav_daily_expense"
        android:name="com.project.whattodonow.ui.gallery.DateReminderFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/nav_add_task"
        android:name="com.project.whattodonow.ui.add_task.AddTasksFragment"
        android:label="@string/menu_add_task"
        tools:layout="@layout/fragment_add_task" />
</navigation>